@@ -1,5 +1,15 @@
 2008-09-29  Brian Curry  <http://www.raiazome.com/Brian_Curry>
 
+	* modules/recaptcha.pl: New perldoc-style documentation.
+	($ReCaptchaTheme): New option.
+	($ReCaptchaTabIndex): New option.
+	(ReCaptchaGetQuestionHtml): New function. Permits site-specific
+	customization of module-emitted HTML and CSS.
+	(ReCaptchaGetQuestion): Rewritten so as to leverage the two new options and
+	one new function.
+
+2008-09-29  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
 	* modules/toc.pl: New perldoc-style documentation.
 	($TocHeaderText): New option.
 	(TocPageHtml): Introduced a Footnotes extension-specific hack, so
